--- a/front/src/SCSS/CadetPage/RecruitCadet.scss
+++ b/front/src/SCSS/CadetPage/RecruitCadet.scss
@@ -5,7 +5,8 @@
   max-width: 1440px;
   .recruitCadet-grid {
     display: grid;
-    grid-template-columns: repeat(5, 3fr);
+    grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
+    align-content: start;
   }
   .noCadet {
     display: flex;
