--- a/front/src/SCSS/ProfilePage/ProfileHeader.scss
+++ b/front/src/SCSS/ProfilePage/ProfileHeader.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
   flex: auto;
   border-radius: $round;
   padding: 2rem;
@@ -220,4 +220,26 @@ textarea.introduction__textarea {
   border: 2px solid $mainColor;
   padding: 1rem;
   resize: none;
+}
+
+@media (max-width: 700px) {
+  .profileHeader {
+    flex-direction: column;
+    align-items: center;
+  }
+  .right__introduction {
+    max-width: 80vw;
+    min-height: fit-content;
+    text-align: center;
+  }
+  .header__right {
+    margin-top: 1rem;
+    max-width: 70vw;
+    margin-right: 3rem;
+    .right__row1,
+    .right__row2 {
+      display: flex;
+      justify-content: center;
+    }
+  }
 }
