fix: #697 fix media query flickering in safari

--- a/front/src/SCSS/init.scss
+++ b/front/src/SCSS/init.scss
@@ -30,7 +30,7 @@ body {
   background-color: $bodyColor;
   color: $darkGrey;
 }
-@media (max-width: 78rem) {
+@media (max-width: 75em) {
   html {
     font-size: 12px;
   }
