chore: #635 adjust line-height

--- a/front/src/SCSS/LoungePage/LoungeComment.scss
+++ b/front/src/SCSS/LoungePage/LoungeComment.scss
@@ -21,6 +21,7 @@
     .comment-content {
       border-radius: 2rem;
       background-color: $slightGrey;
+      line-height: 140%;
       padding: 0.5rem 1rem;
       width: fit-content;
       word-break: break-all;
