chore: #704 add hosting skills

--- a/front/src/SCSS/Common/Chat/ChatCard.scss
+++ b/front/src/SCSS/Common/Chat/ChatCard.scss
@@ -32,6 +32,7 @@
       }
     }
     .chat-message-small {
+      margin-right: 0.5rem;
       font-size: $fontSm;
       padding: 0.5rem 0.8rem;
       box-shadow: 0rem 0.3rem 0.3rem 0rem rgba(0, 0, 0, 0.05);
