--- a/front/src/SCSS/Common/Navbar/Navbar.scss
+++ b/front/src/SCSS/Common/Navbar/Navbar.scss
@@ -74,6 +74,10 @@
         color: $grey;
         border-bottom: 1px solid $lightestGrey;
       }
+      .res__userlist {
+        max-height: 20rem;
+        overflow-y: auto;
+      }
       .res__userCard {
         display: flex;
         align-items: center;
@@ -98,12 +102,17 @@
       display: flex;
       flex-direction: column;
       padding: 0.3rem 0.3rem;
+      margin-top: 0.5rem;
       .res__title2 {
         font-size: $fontSs;
         font-weight: $regular;
         padding-bottom: 0.3rem;
         color: $grey;
         border-bottom: 1px solid $lightestGrey;
+      }
+      .res__projectlist {
+        max-height: 20rem;
+        overflow-y: auto;
       }
       .res__projectCard {
         display: flex;
