feat: #605 add lounge edited

--- a/front/src/SCSS/ProfilePage/ProfileHeader.scss
+++ b/front/src/SCSS/ProfilePage/ProfileHeader.scss
@@ -242,4 +242,7 @@ textarea.introduction__textarea {
       justify-content: center;
     }
   }
+  .right__introduction-none {
+    text-align: center;
+  }
 }
