--- a/front/src/SCSS/MainPage/Cards.scss
+++ b/front/src/SCSS/MainPage/Cards.scss
@@ -2,6 +2,7 @@
 
 .cards {
   position: relative;
+  width: 20rem;
   margin-right: 1.7rem;
   background-color: white;
   // background-color: pink;
