--- a/front/src/SCSS/AllProjectPage/ProjectTypeBar.scss
+++ b/front/src/SCSS/AllProjectPage/ProjectTypeBar.scss
@@ -3,18 +3,24 @@
 .project-bar {
   display: flex;
   background-color: $bodyColor;
-  height: 4rem;
+  // height: 4rem;
   align-items: center;
   justify-content: space-between;
   padding-left: 1rem;
   padding-right: 2rem;
   margin-top: 1rem;
+  // flex-wrap: wrap;
+  margin-bottom: 1rem;
 }
 
 .project-bar-column1 {
   display: flex;
   align-items: center;
-  min-width: max-content;
+  .recruit-project,
+  .proceed-project,
+  .public-project {
+    min-width: max-content;
+  }
 }
 
 .project-bar-column2 {
@@ -78,4 +84,29 @@
 
 .filter_wrap {
   position: relative;
+}
+
+@media (max-width: 640px) {
+  .project-bar {
+    flex-direction: column;
+    margin-bottom: 1rem;
+    .project-bar-column1 {
+      margin-bottom: 1rem;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .project-bar {
+    gap: 1rem;
+  }
+  .project-bar-column1 {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .allproject__wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
