--- a/front/src/SCSS/Loading.scss
+++ b/front/src/SCSS/Loading.scss
@@ -6,4 +6,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  svg {
+    max-width: 5rem;
+    max-height: 5rem;
+  }
 }
