--- a/front/src/SCSS/Common/Chat/InChat.scss
+++ b/front/src/SCSS/Common/Chat/InChat.scss
@@ -47,7 +47,7 @@
     }
     .btn {
       padding: 0;
-      margin: 0.5rem;
+      margin-right: 0.5rem;
       position: absolute;
       right: 1.5rem;
       box-shadow: none;
