--- a/front/src/SCSS/ProjectEditPage/ProjectEditPage.scss
+++ b/front/src/SCSS/ProjectEditPage/ProjectEditPage.scss
@@ -68,7 +68,9 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      visibility: hidden;
+      opacity: 0;
+      transition: opacity 0.1s ease-in;
+
       .img-hover__add {
         border: 2px solid $lightestGrey;
         width: max-content;
