feat: #804 add completed project to dashboard

--- a/front/src/SCSS/Base.scss
+++ b/front/src/SCSS/Base.scss
@@ -11,6 +11,7 @@ $lightestGrey: #e5e5e5;
 $slightGrey: #efefef;
 $pointRed: #ff6864;
 $pointBlue: #5bbcb6;
+$pointYellow: #ffb648;
 //font-weight 기본:400
 $bold: 800;
 $semiBold: 700;
