feat: #803 add profileImage change

--- a/front/src/SCSS/ProfileEditPage/ProfileEditPage.scss
+++ b/front/src/SCSS/ProfileEditPage/ProfileEditPage.scss
@@ -12,4 +12,10 @@
     height: 2px;
     align-self: center;
   }
+
+  .profile__invalidMsg {
+    color: $pointRed;
+    font-weight: $semiBold;
+    margin-top: 1rem;
+  }
 }
