chore: refine CSS

--- a/front/src/SCSS/ProfilePage/ProfileHeader.scss
+++ b/front/src/SCSS/ProfilePage/ProfileHeader.scss
@@ -145,7 +145,7 @@
     color: $darkGrey;
     box-shadow: none;
     border: 1px solid $lightestGrey;
-    padding: 0 1.2rem;
+    padding: 0.3rem 1.2rem;
   }
 
   .row1__edit-profile {
