--- a/front/src/SCSS/LoginPage/LoginPage.scss
+++ b/front/src/SCSS/LoginPage/LoginPage.scss
@@ -6,13 +6,14 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	margin : 5rem;
-
+	margin : 4rem;
 	.login__header {
 		display: flex;
 		flex-direction: row;
 		justify-content: center;
 		align-items: center;
+		margin-top: 3rem;
+		margin-bottom: 3rem;
 		.title-text {
 			letter-spacing: -0.1rem;
 			color: $mainColor;
@@ -28,39 +29,36 @@
 		  }
 	}
 
-	.signup__text{
-		margin: 5rem 0rem 2rem 0rem;
-		font-size: 2rem;
-		color: $grey;
-	}
+	// .signup__text{
+	// 	margin: 3rem 0rem 2rem 0rem;
+	// 	font-size: 1.5rem;
+	// 	color: $grey;
+	// }
 
-	.login__seperator {
-		display: flex;
-		flex-direction: row;
-		width: 40%;
-		margin: 4rem 0rem 5rem 0rem;
+	// .login__seperator {
+	// 	display: flex;
+	// 	flex-direction: row;
+	// 	width: 40%;
+	// 	margin: 2rem 0rem 3rem 0rem;
 
-		hr {
-			width: 100%;
-			color: black;
-			height: 0.2rem;
-		}
-		.or__text {
-			display: block;
-			padding: 0.2rem;
-			font-size: 2rem;
-			text-align: center;
-		}
-
-
-	}
+	// 	hr {
+	// 		width: 100%;
+	// 		color: black;
+	// 		height: 0.2rem;
+	// 	}
+	// 	.or__text {
+	// 		display: block;
+	// 		padding: 0.2rem;
+	// 		font-size: 2rem;
+	// 		text-align: center;
+	// 	}
+	// }
 
 	.intra__login__btn {
-		width: 40%;
 		padding: 1rem 2rem 1rem 2rem;
 		border: 1px solid $grey;
 		border-radius: $round;
-		margin-bottom: 1rem;
+		margin-bottom: 2rem;
 		background-color: #01B0B2;
 		box-shadow: $shadow;
 
@@ -76,80 +74,20 @@
 			color: black;
 		}
 		.btn-text {
-			font-size: 2.5rem;
-			// font-weight: $normal;
+			font-size: 1.5rem;
 			color: white;
-			// &:hover {
-			// 	color: $mainColor;
-			//   }
-		}
-	}
-
-	.intra__login__btn-mobile {
-		display: none;
-		width: 40%;
-		padding: 1rem 2rem 1rem 2rem;
-		border: 1px solid $grey;
-		border-radius: $round;
-		margin-bottom: 1rem;
-		background-color: #01B0B2;
-		box-shadow: $shadow;
-
-		.login__btn__tag {
-			display: flex;
-			flex-direction: row;
-			justify-content: center;
-			align-items: center;
-		}
-		.btn-icon {
-			font-size: 4rem;
-			margin-right: 1rem;
-			color: black;
-		}
-		.btn-text {
-			font-size: 2.5rem;
-			// font-weight: $normal;
-			color: white;
-			// &:hover {
-			// 	color: $mainColor;
-			//   }
 		}
 	}
 
 	.google__login__btn {
-		width: 40%;
-		padding: 1rem 2rem 1rem 2rem;
+		padding: 1rem 2.5rem 1rem 2rem;
 		border: 1px solid $grey;
 		border-radius: $round;
 		margin-bottom: 1rem;
 		background-color: white;
 		box-shadow: $shadow;
-		.login__btn__tag {
-			display: flex;
-			flex-direction: row;
-			justify-content: center;
-			align-items: center;
-		}
-		.btn-icon {
-			font-size: 4rem;
-			margin-right: 1rem;
-		}
-		.btn-text {
-			font-size: 2.5rem;
-			// font-weight: $normal;
-			color: black;
-		}
-	}
+		text-overflow: ellipsis;
 
-	.google__login__btn-mobile {
-		display: none;
-		width: 40%;
-		padding: 1rem 2rem 1rem 2rem;
-		border: 1px solid $grey;
-		border-radius: $round;
-		margin-bottom: 1rem;
-		background-color: white;
-		box-shadow: $shadow;
 		.login__btn__tag {
 			display: flex;
 			flex-direction: row;
@@ -161,34 +99,14 @@
 			margin-right: 1rem;
 		}
 		.btn-text {
-			font-size: 2.5rem;
-			// font-weight: $normal;
+			font-size: 1.5rem;
 			color: black;
 		}
 	}
 
 	.google__text{
-		// margin: 5rem 0rem 2rem 0rem;
 		font-size: 1rem;
 		color: $grey;
+		margin-bottom: 5rem;
 	}
   }
-
-@media (max-width: 640px) {
-	.intra__login__btn {
-		display: none;
-	}
-	.google__login__btn {
-		display: none;
-	}
-
-	.intra__login__btn-mobile {
-		display: inline;
-		margin-left: 1rem;
-	}
-
-	.google__login__btn-mobile {
-		display: block;
-		margin-left: 1rem;
-	}
-}
